direct child selector added this will prevent the whole site from shifting around

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,10 @@ section {
     margin-bottom: 100px;
 }
 
-body section:last-of-type{
+body>section:last-of-type{
 	margin-bottom: 0;
 }
+
 h1 {
     font-size: 3rem;
     color: #FF4103;
